--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "elastic-apm-node",
-  "version": "4.0.0-dev",
-  "private": true,
+  "version": "3.48.0",
   "description": "The official Elastic APM agent for Node.js",
   "main": "index.js",
   "types": "index.d.ts",
@@ -51,7 +50,7 @@
     "url": "git://github.com/elastic/apm-agent-nodejs.git"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=8.6.0"
   },
   "keywords": [
     "opbeat",
