chore: add inputVersions to matrix

--- a/.github/workflows/tav-command.yml
+++ b/.github/workflows/tav-command.yml
@@ -94,6 +94,7 @@ jobs:
                   core.setFailed(`Incorrect versions list ${match[3]}, please review it'`)
                   return
                 }
+                resolvedVersions.push(...inputVersions)
               } else {
                 resolvedVersions.push(...versions)
               }
